# django-education-project

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml  lint.yaml
core/: settings.py  urls.py
education_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
education_app/migrations/: 0001_initial.py  0002_assessment_work_students_work_teachers.py  0003_alter_assessment_student_alter_assessment_teacher.py
education_app/templates/education_app/: work_create.html  work_delete.html  work_detail.html  work_list.html  work_update.html
my_site/: settings.py  urls.py
rest/: serializers.py  tests.py  urls.py  views.py
static/: styles.css
templates/: index.html
tests/: test_simple.py
user_app/: forms.py  models.py  urls.py  views.py
user_app/migrations/: 0001_initial.py
user_app/templates/user_app/: login.html  signup.html
